--- a/add_product.html
+++ b/add_product.html
@@ -110,7 +110,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="edit_product.js"></script>
+    <script src="list_catagory.js"></script>
     <script src="addProductCookie.js"></script>
   </body>
 </html>
