--- a/list_products.html
+++ b/list_products.html
@@ -38,6 +38,6 @@
         </table>
       </div>
     </main>
-    <script src="./lis_products.js"></script>
+    <script src="./list_products.js"></script>
   </body>
 </html>
