--- a/update_product.html
+++ b/update_product.html
@@ -92,7 +92,7 @@
       </div>
     </main>
 
-    <script src="edit_product.js"></script>
+    <script src="list_catagory.js"></script>
     <script src="update_product.js"></script>
     <!-- <script src="."></script> -->
   </body>
