--- a/all_product.html
+++ b/all_product.html
@@ -128,7 +128,7 @@
           </div>
 
           <div class="modal-footer">
-            <button class="btn btn-primary submit" type="submit">submit</button>
+            <button name="id" class="btn btn-primary submit" type="submit">submit</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
           </div>
