login for user and admin and register with validation

--- a/forget_password.html
+++ b/forget_password.html
@@ -11,16 +11,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Login</title>
+    <title>Forget_Password</title>
   </head>
-
   <body>
-    <!-- START BODY -->
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
           <div class="form text-white p-5 col-md-4">
-            <form action="login.php" method="post">
+            <form action="forgetPassword.php" method="post">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input
@@ -32,30 +30,12 @@
                 />
                 <p class="invalid-feedback"></p>
               </div>
-
-              <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" />
-                <p class="invalid-feedback"></p>
-              </div>
-              <div class="mb-3">
-                <p class="pt-2">
-                  <a class="forgot" href="forget_password.html"
-                    >Forget Password</a
-                  >
-                </p>
-                <p class="">
-                  if you didn't have account
-                  <a class="register" href="Register.html">Register</a>
-                </p>
-              </div>
-              <button type="submit" class="btn float-end">Submit</button>
+              <button type="submit" class="btn">Submit</button>
             </form>
           </div>
         </div>
       </div>
     </section>
-    <!-- End BODY -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
@@ -63,6 +43,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./js/CookieLogin.js"></script>
+    <script src="./js/forgetPwdCookie.js"></script>
   </body>
 </html>
