--- a/all_product.html
+++ b/all_product.html
@@ -119,6 +119,8 @@
               <div class="col-md-12">
                 <label for="validationCustom01" class="form-label">Product image</label>
                 <input type="file" class="form-control" id="validationCustom01" name="img"  required>
+                <!-- <input type="text" class="form-control" id="validationCustom01" name="img"  value="" required> -->
+
                 <div class="valid-feedback">
                 </div>
               </div>
