--- a/add_product.html
+++ b/add_product.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/registerstyle.css" />
+    <script
+      src="https://kit.fontawesome.com/84e17ee5b7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>add product</title>
   </head>
 
@@ -144,6 +148,20 @@
         </div>
       </div>
     </section>
+    <footer class="py-4 bg-black text-white">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="d-flex footer-text">
+          <p>@Copyright 2022 - Stradate by Cafe Team</p>
+        </div>
+
+        <div class="footer-i">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
