--- a/all_product.html
+++ b/all_product.html
@@ -14,11 +14,11 @@
 
   <script src="https://kit.fontawesome.com/84e17ee5b7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/all_users.css">
+  <link rel="stylesheet" href="./css/all_products.css">
 </head>
 
 <body>
-  <div class="all_users">
+  <div class="all_products">
     <!-- Start Navbar -->
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
