--- a/add_product.html
+++ b/add_product.html
@@ -167,6 +167,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="list_catagory.js"></script>
+    <script src="js/list_catagory.js"></script>
   </body>
 </html>
