--- a/add_product.html
+++ b/add_product.html
@@ -168,5 +168,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/list_catagory.js"></script>
+    <script src="js/addProductCookie.js"></script>
   </body>
 </html>
