--- a/all_product.html
+++ b/all_product.html
@@ -57,9 +57,10 @@
     <!-- End Navbar -->
     <div class="container py-5 d-flex flex-wrap justify-content-between col-12">
       <div class="col-3">
-        <h1 class="text-white">All Users</h1>
+        <h1 class="text-white">All Products</h1>
       </div>
-      <div class="col-3"><button class="btn addUser float-end">Add User</button></div>
+      <!-- <to do></to> -->
+      <div class="col-3"><button class="btn addUser float-end" formaction="add_product.html">Add product</button></div>
 
     </div>
 
@@ -182,7 +183,7 @@
   </div>
 
   <script src="js/list_products.js"></script>
-  <!-- <script src="list_catagory.js"></script> -->
+  <script src="js/addProductCookie.js"></script>
 </body>
 
 </html>
