--- a/all_product.html
+++ b/all_product.html
@@ -102,13 +102,13 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               <div class="col-md-12">
                 <label for="validationCustom01" class="form-label">Name</label>
-                <input type="text" class="form-control" id="validationCustom01" name="name" value="" required>
+                <input type="text" class="form-control" id="validationCustom01" name="name" value="" >
                 <div class="invalid-feedback">
                 </div>
               </div>
               <div class="col-md-12">
                 <label for="validationCustom01" class="form-label">Price</label>
-                <input type="number" class="form-control" id="validationCustom01" name="price" value="" required>
+                <input type="number" class="form-control" id="validationCustom01" name="price" value="" >
                 <div class="valid-feedback">
                 </div>
               </div>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="modal-footer">
-            <button name="id" class="btn btn-primary submit" type="submit">submit</button>
+            <button name="id" class="btn btn-primary submit" type="submit">submit</button>id e.prvend defult activ class
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
           </div>
