--- a/all_product.html
+++ b/all_product.html
@@ -83,7 +83,7 @@
             <th>status</th>
             <th>Action</th>
           </thead>
-          <tbody class="text-black"></tbody>
+          <tbody class="text-black" id="all_product"></tbody>
         </table>
       </div>
     </section>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="modal-footer">
-            <button name="id" class="btn btn-primary submit" type="submit">submit</button>id e.prvend defult activ class
+            <button name="id" class="btn btn-primary submit" type="submit">submit</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
           </div>
