--- a/add_product.html
+++ b/add_product.html
@@ -21,10 +21,61 @@
       src="https://kit.fontawesome.com/84e17ee5b7.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/navbar.css">
     <title>add product</title>
   </head>
 
   <body>
+    <!-- Start Navbar -->
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <!-- <img alt="" src="./images/icon.png" /> -->
+
+          <span class="logo">Cafetria</span>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mx-auto mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Users</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">checks</a>
+            </li>
+          </ul>
+          <div class="d-flex align-items-center">
+            <div>
+              <img src="./images/pic/images/admin.png" class="rounded-5" alt="" srcset="" width="40px" height="40px">
+            </div>
+            <span class="text-white mx-3 name">Alaa Nassar</span>
+            <!-- <button class="btn " type="submit">Log Out</button> -->
+            <div class="dropdown">
+              <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              </button>
+              <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
+                <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
@@ -148,20 +199,22 @@
         </div>
       </div>
     </section>
+    <!-- Start Footer -->
     <footer class="py-4 bg-black text-white">
       <div class="container d-flex justify-content-between align-items-center">
         <div class="d-flex footer-text">
-          <p>@Copyright 2022 - Stradate by Cafe Team</p>
+          <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
         </div>
 
-        <div class="footer-i">
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-linkedin-in"></i>
+        <div class="footer-i d-flex">
+          <div class="social"><i class="fab fa-facebook-f"></i></div>
+          <div class="social"><i class="fab fa-twitter"></i></div>
+          <div class="social"><i class="fab fa-instagram"></i></div>
+          <div class="social"><i class="fab fa-linkedin-in"></i></div>
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
