--- a/all_product.html
+++ b/all_product.html
@@ -115,7 +115,7 @@
           <div class="modal-header">
 
             <form class="row g-3 needs-validation"  method="post" enctype="multipart/form-data"
-              Action="php/updateOneProduct.php">
+              Action="./php/updateOneProduct.php">
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               <div class="col-md-12">
                 <label for="validationCustom01" class="form-label">Name</label>
