--- a/userHome.html
+++ b/userHome.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/userHome.css">
     <link rel="stylesheet" href="css/navbar.css">
-    <script src="js/session.js"></script>
+    <!-- <script src="js/session.js"></script> -->
 </head>
 
 <body>
@@ -50,13 +50,22 @@
               </div>
               <span id="user_name" class="text-white mx-3 name"></span>
               <!-- <button class="btn " type="submit">Log Out</button> -->
-              <div class="dropdown">
+              <!-- <div class="dropdown">
                 <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 </button>
                 <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
-                  <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                  <button id="log_out_btn" class="btn "><a class="dropdown-item"href="#">Log out</a></li>
                   
-                </div>
+                </div> -->
+                <div class="dropdown">
+                    <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
+                      <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                      
+                    </div>
+
+
               </div>
             </div>
           </div>
@@ -208,6 +217,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="js/userHome.js"></script>
+    <script src="js/session.js"></script>
 </body>
 
 </html>
