--- a/all_users.html
+++ b/all_users.html
@@ -36,19 +36,19 @@
         <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mx-auto mb-lg-0 ">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#home">Home</a>
+              <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Products</a>
+              <a class="nav-link" href="all_product.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Users</a>
+              <a class="nav-link" href="all_users.html">Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#gallery">Orders</a>
+              <a class="nav-link" href="userOrder.html">Orders</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#gallery">checks</a>
+              <a class="nav-link" href="tableCheck.html">checks</a>
             </li>
           </ul>
           <div class="d-flex align-items-center">
@@ -78,7 +78,8 @@
           <div class="col-3">
             <h1 class="text-white">All Users</h1>
           </div>
-          <div class="col-3 "><button class="btn addUser float-end">Add User</button></div>
+          <!-- add link to register -->
+          <div class="col-3 "><button  class="btn addUser float-end"><a href="Register.html">Add User</a></button></div>
 
         </div>
       </div>
@@ -198,7 +199,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="all_users.js"></script>
+  <script src="js/all_users.js"></script>
 </body>
 
 </html>
