--- a/all_users.html
+++ b/all_users.html
@@ -20,55 +20,66 @@
 
 <body>
   <div class="all_users ">
-    <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg ">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">
-          <!-- <img alt="" src="./images/icon.png" /> -->
+   <!-- Start Navbar -->
+   <nav class="navbar navbar-expand-lg ">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <!-- <img alt="" src="./images/icon.png" /> -->
 
-          <span class="logo">Cafetria</span>
-        </a>
+        <span class="logo">Cafetria</span>
+      </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mx-auto mb-lg-0 ">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="all_product.html">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="all_users.html">Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="userOrder.html">Orders</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="tableCheck.html">checks</a>
-            </li>
-          </ul>
-          <div class="d-flex align-items-center">
-            <div>
-              <img src="./images/pic/images/admin.png" class="rounded-5" alt="" srcset="" width="40px" height="40px">
-            </div>
-            <span class="text-white mx-3 name">Alaa Nassar</span>
-            <!-- <button class="btn " type="submit">Log Out</button> -->
-            <div class="dropdown">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="adminHome.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="all_product.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="all_users.html">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="orders.html">Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tableCheck.html">checks</a>
+          </li>
+        </ul>
+        <div class="d-flex align-items-center">
+          <div>
+            <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px">
+          </div>
+          <span id="user_name" class="text-white mx-3 name"></span>
+          <button class="btn btn-primary" type="submit" id="log_out_btn">Log Out</button>
+          <!-- <div class="dropdown">
               <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
               </button>
               <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
-                <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                <button id="log_out_btn" class="btn "><a class="dropdown-item"href="#">Log out</a></li>
                 
-              </div>
-            </div>
-          </div>
+              </div> -->
+          <!-- <div class="dropdown">
+                  <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                  </button>
+                  <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
+                    <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                    
+                  </div>
+              </div> -->
+
+
+
         </div>
       </div>
-    </nav>
+    </div>
+
+  </nav>
     <!-- End Navbar -->
 
     <div class="main bg-black">
@@ -179,27 +190,28 @@
 
 
 
-      <!-- Start Footer -->
-      <footer class="py-4 bg-black text-white">
-        <div class="container d-flex justify-content-between align-items-center">
-          <div class="d-flex footer-text">
-            <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
-          </div>
-
-          <div class="footer-i d-flex">
-
-            <div class="social"><i class="fab fa-facebook-f"></i></div>
-            <div class="social"><i class="fab fa-twitter"></i></div>
-            <div class="social"><i class="fab fa-instagram"></i></div>
-            <div class="social"><i class="fab fa-linkedin-in"></i></div>
-          </div>
+    <!-- Start Footer -->
+    <footer class="py-4 bg-black text-white">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="d-flex footer-text">
+          <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
         </div>
-      </footer>
-      <!-- End Footer -->
+
+        <div class="footer-i d-flex">
+
+          <div class="social"><i class="fab fa-facebook-f"></i></div>
+          <div class="social"><i class="fab fa-twitter"></i></div>
+          <div class="social"><i class="fab fa-instagram"></i></div>
+          <div class="social"><i class="fab fa-linkedin-in"></i></div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/all_users.js"></script>
+  <script src="js/session.js"></script>
 </body>
 
 </html>
