--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn " type="submit"><a href="login.html">Login</a> </button>
+                        <button class="btn " type="submit"><a class="text-white" href="login.html">Login</a> </button>
                     </form>
                 </div>
             </div>
