--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn " type="submit"><a class="text-white" href="login.html">Login</a> </button>
+                        
+                            <a class="btn text-white" href="login.html">Login</a> 
+                      
                     </form>
                 </div>
             </div>
