--- a/all_product.html
+++ b/all_product.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-  <div class="all_products">
-    <div class="bg-black ">
+  <div class="all_products bg-black">
+    <div class=" ">
       <!-- Start Navbar -->
       <!-- Start Navbar -->
       <nav class="navbar navbar-expand-lg ">
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
+                <a class="nav-link " aria-current="page" href="adminHome.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="all_product.html">Products</a>
