--- a/all_product.html
+++ b/all_product.html
@@ -93,8 +93,8 @@
             <h1 class="text-white">All Products</h1>
           </div>
           <!-- <to do></to> -->
-          <div class="col-3"><button style="color: white;" class="btn addUser float-end" id="add_btn">Add
-              product</button>
+          <div class="col-3">
+            <button class="btn addUser float-end" id="add_btn">Add product</button>
           </div>
 
         </div>
