--- a/all_users.html
+++ b/all_users.html
@@ -90,7 +90,7 @@
             <h1 class="text-white">All Users</h1>
           </div>
           <!-- add link to register -->
-          <div class="col-3 "><button  class="btn addUser float-end"><a href="Register.html">Add User</a></button></div>
+          <div class="col-3 "><button  class="btn addUser float-end"><a href="addUser.html">Add User</a></button></div>
 
         </div>
       </div>
