--- a/userHome.html
+++ b/userHome.html
@@ -34,7 +34,7 @@
             <li class="nav-item">
               <a class="nav-link" href="myOrders.html">My Orders</a>
             </li>
-           
+
           </ul>
           <div class="d-flex align-items-center">
             <div>
@@ -76,14 +76,14 @@
         <div class="col-md-12 row   pb-5">
           <div class="col-md-12 ">
             <h3 id="hide4">Latest Order</h3>
-
           </div>
-          <div class="row col-md-12   py-5" style="min-height: 55vh;">
+          <div class="row col-md-12 py-5" style="min-height: 60vh;">
             <div id="hide" class="col-md-8">
               <div class="row col-md-12" id="row1"></div>
             </div>
             <div class="table-div col-md-4 border mt-5 ">
-              <table class="table text-center mt-5" style="   overflow-y: scroll;">
+              <h4 class="text-black mt-3 fw-bold text-center add w-50 mx-auto pb-3">Add To Cart</h4>
+              <table class="table text-center mt-4" style="overflow-y: scroll;">
                 <thead>
                   <tr>
                     <th scope="col">Name</th>
@@ -97,11 +97,11 @@
 
               <div class="order-section">
                 <div class="col-md-12">
-                  <label for="" class="py-2">Notes</label>
+                  <label for="" class="py-2 text-black">Notes</label>
                   <textarea id="notes" class="w-100"></textarea>
                 </div>
                 <div class="col-md-12">
-                  <label for="checkBox" class="form-label">Room</label>
+                  <label for="checkBox" class="form-label py-2 text-black">Room</label>
                   <select class="form-select" id="checkBox" required>
                     <option selected value="">Choose...</option>
                   </select>
@@ -142,23 +142,23 @@
         </ul>
       </nav>
     </div>
-   <!-- Start Footer -->
-   <footer class="py-4 bg-black text-white">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="d-flex footer-text">
-        <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
-      </div>
+    <!-- Start Footer -->
+    <footer class="py-4 bg-black text-white">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="d-flex footer-text">
+          <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
+        </div>
 
-      <div class="footer-i d-flex">
+        <div class="footer-i d-flex">
 
-        <div class="social"><i class="fab fa-facebook-f"></i></div>
-        <div class="social"><i class="fab fa-twitter"></i></div>
-        <div class="social"><i class="fab fa-instagram"></i></div>
-        <div class="social"><i class="fab fa-linkedin-in"></i></div>
+          <div class="social"><i class="fab fa-facebook-f"></i></div>
+          <div class="social"><i class="fab fa-twitter"></i></div>
+          <div class="social"><i class="fab fa-instagram"></i></div>
+          <div class="social"><i class="fab fa-linkedin-in"></i></div>
+        </div>
       </div>
-    </div>
-  </footer>
-  <!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
   </div>
 
   <script src="https://kit.fontawesome.com/21cdd4de67.js" crossorigin="anonymous"></script>
