--- a/myOrders.html
+++ b/myOrders.html
@@ -125,7 +125,7 @@
     <footer class="py-4 bg-black text-white">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="d-flex footer-text">
-                <p>@Copyright 2022 - Stradate by Cafe Team</p>
+                <p>@Copyright 2022 - Stradate Target Team</p>
             </div>
 
             <div class="footer-i">
