--- a/all_product.html
+++ b/all_product.html
@@ -88,7 +88,8 @@
       </nav>
       <!-- End Navbar -->
       <div>
-        <div class="container py-5 d-flex flex-wrap justify-content-between col-12">
+        <div class="bg-black py-5 ">
+         <div class="container d-flex flex-wrap justify-content-between col-12">
           <div class="col-3">
             <h1 class="text-white">All Products</h1>
           </div>
@@ -96,6 +97,7 @@
           <div class="col-3">
             <button class="btn addUser float-end" id="add_btn">Add product</button>
           </div>
+         </div>
 
         </div>
 
