--- a/Register.html
+++ b/Register.html
@@ -24,12 +24,12 @@
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
-          <div class="form text-white p-5 col-md-6">
+          <div class="form text-white px-3 py-2 p-md-5 col-10 col-md-6">
             <form
               action="Register.php"
               method="post"
               enctype="multipart/form-data"
-              class="d-flex flex-wrap col-12"
+              class="d-flex flex-wrap col-md-12"
             >
               <div class="mb-3 col-md-6 px-2">
                 <label for="username" class="form-label">User Name</label>
