--- a/add_product.html
+++ b/add_product.html
@@ -91,7 +91,7 @@
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
-          <div class="form text-white p-5 col-md-6">
+          <div class="form text-white p-3 p-md-5 m-3 m-md-0 col-md-6">
             <form
               action="php/save_product.php"
               method="post"
