--- a/forget_password.html
+++ b/forget_password.html
@@ -17,7 +17,7 @@
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
-          <div class="form text-white p-5 col-md-4">
+          <div class="form text-white p-3 p-md-5 col-md-4">
             <form action="forgetPassword.php" method="post">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
