--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <section class="login">
       <div class="login_backimg">
         <div class="overlay d-flex justify-content-center align-items-center">
-          <div class="form text-white p-5 col-md-4">
+          <div class="form text-white p-md-5 p-3 col-md-4">
             <form action="login.php" method="post">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
