--- a/userHome.html
+++ b/userHome.html
@@ -50,7 +50,7 @@
     <!-- search -->
     <section class="col-md-12">
       <div class="container">
-        <div class="d-flex justify-content-start  py-5 w-50">
+        <div class="d-flex justify-content-start  py-5 col-12 col-md-6">
           <input onkeyup="search()" name="word" class="form-control" type="search" placeholder="Search"
             aria-label="Search" />
         </div>
@@ -58,7 +58,7 @@
         <div class="row col-md-12">
           <div class="container">
             <div class="row col-md-12">
-              <div class="row col-md-8 pt-4" id="search">
+              <div class="row col-md-8 pt-4 mx-0 mx-md-0" id="search">
 
               </div>
               <div class="col-md-4">
@@ -77,7 +77,7 @@
           <div class="col-md-12 ">
             <h3 id="hide4">Latest Order</h3>
           </div>
-          <div class="row col-md-12 py-5" style="min-height: 60vh;">
+          <div class="row col-md-12 justify-content-end mx-auto mx-md-0 py-5" style="min-height: 60vh;">
             <div id="hide" class="col-md-8">
               <div class="row col-md-12" id="row1"></div>
             </div>
@@ -126,7 +126,7 @@
             <div class="pt-5">
               <h3>All Products</h3>
             </div>
-            <div id="row" class="row col-md-12"></div>
+            <div id="row" class="row col-md-12 justify-content-center justify-content-md-between"></div>
           </div>
 
 
