--- a/adminHome.html
+++ b/adminHome.html
@@ -111,7 +111,7 @@
             </div>
 
           </div>
-          <div class="row col-md-12 justify-content-end  py-5" style="min-height: 60vh;">
+          <div class="row col-md-12 justify-content-end  py-5 mx-auto mx-md-0" style="min-height: 60vh;">
             <div class="table-div col-md-4 border mt-5 ">
               <h4 class="text-black mt-3 fw-bold text-center add w-50 mx-auto pb-3">Add To Cart</h4>
               <table class="table text-center mt-4" style="overflow-y: scroll;">
